figue/tests/integration/snapshots/main__integration__subcommand_errors__nested_subcommand_missing_required.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
main repo clone

Clone a repository

USAGE:
    main repo clone <URL>

ARGUMENTS:
        <URL>
            Repository URL


Error: missing required argument
   ╭─[ <usage>:1:12 ]
   │
 1 │ repo clone <url>
   │            ──┬──  
   │              ╰──── Repository URL
───╯
